[WFLY-10091] Check Java version before setting up GC logging